# ChangeLog for media-gfx/blender
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/blender/ChangeLog,v 1.116 2007/07/15 09:50:28 lu_zero Exp $

  15 Jul 2007; Luca Barbato <lu_zero@gentoo.org>
  +files/blender-2.44-scriptsdir.patch, blender-2.44.ebuild:
  make scriptsdir behaviour a little different

*blender-2.44 (17 May 2007)

  17 May 2007; Luca Barbato <lu_zero@gentoo.org> +blender-2.44.ebuild:
  New ebuild contributed by Cornelius Weig
  <bitte.keine.werbung.einwerfen@googlemail.com>, Daniel Genrich
  <daniel.genrich@gmx.net> and mattepiu

  17 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org> blender-2.43.ebuild:
  ppc stable, bug #168907

  16 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> blender-2.43.ebuild:
  Again ~sparc

  15 Apr 2007; Markus Rothe <corsair@gentoo.org> blender-2.43.ebuild:
  Stable on ppc64; bug #168907

  13 Apr 2007; Peter Weller <welp@gentoo.org> blender-2.41-r1.ebuild,
  blender-2.42a-r1.ebuild, blender-2.43.ebuild:
  Keywording all versions of blender ~amd64 due to security issues and bug 174345

  12 Apr 2007; Raúl Porcel <armin76@gentoo.org> blender-2.43.ebuild:
  x86 stable wrt security bug 168907

  12 Apr 2007; Peter Weller <welp@gentoo.org> blender-2.43.ebuild:
  Stable on amd64 wrt bug 168907

  25 Mar 2007; Alexis Ballier <aballier@gentoo.org> blender-2.42a-r1.ebuild:
  Adjust x264-svn deps to fit with the new snapshot

  07 Feb 2007; Simon Stelling <blubb@gentoo.org> blender-2.42a-r1.ebuild:
  stable on amd64; bug 157814

  30 Jan 2007; Luca Barbato <lu_zero@gentoo.org> -blender-2.42a.ebuild,
  blender-2.42a-r1.ebuild:
  Cleanup and minor fix to prevent upgrade/downgrade

  04 Jan 2007; Christian Faulhammer <opfer@gentoo.org>
  blender-2.42a-r1.ebuild:
  stable x86, bug #157814

  23 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  blender-2.42a-r1.ebuild:
  Stable on ppc wrt bug #157814.
