@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/blender
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/blender/ChangeLog,v 1.116 2007/07/15 09:50:28 lu_zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/blender/ChangeLog,v 1.117 2007/07/15 10:24:26 lu_zero Exp $
+
+  15 Jul 2007; Luca Barbato <lu_zero@gentoo.org> blender-2.44.ebuild:
+  Add verse support as requested in bug #173124
 
   15 Jul 2007; Luca Barbato <lu_zero@gentoo.org>
   +files/blender-2.44-scriptsdir.patch, blender-2.44.ebuild:
